# sequent_peak_algorithm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml
examples/: example_1.ipynb  example_1_raw_data.csv  example_1_results.csv  example_2.ipynb
sequent_peak_algorithm/: sequent_peak_algorithm.py
tests/: test_sequent_peak_algorithm.py
