[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequent_peak_algorithm"
version = "0.0.1"
authors = [
  { name="Lena Marie Müller", email="lenamariemue@gmail.com" },
]
description = "Sequent Peak Algorithm for the design and simulation of water reservoirs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]